objects/vlocity_ins__DrugSubstitute__c.object
<CustomObject>
    <description>Drug Substitute is a therapeutically equivalent of a medicine. Drug Substitute is used as an alternate or substituted medicine for a brand name prescription medicine. Master-detail child object of Drug.</description>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <description>A description of why the substituted drug can replace the primary drug.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>A description of why the substituted drug can replace the primary drug.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugId__c</fullName>
        <description>The primary drug from the Drug object that is referenced for substitution.</description>
        <inlineHelpText>The primary drug from the Drug object that is referenced for substitution.</inlineHelpText>
        <label>Drug</label>
        <referenceTo>vlocity_ins__Drug__c</referenceTo>
        <relationshipLabel>Drug Substitutes</relationshipLabel>
        <relationshipName>DrugSubstitutes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__DrugName__c</fullName>
        <formula>IF(vlocity_ins__DrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__DrugId__r.vlocity_ins__TradeName__c, vlocity_ins__DrugId__r.vlocity_ins__GenericName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveEndDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Designates if the drug substitute is currently active.</description>
        <inlineHelpText>Designates if the drug substitute is currently active.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubstituteDrugId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The substituted drug from the Drug.</description>
        <inlineHelpText>The substituted drug from the Drug.</inlineHelpText>
        <label>Substitute Drug</label>
        <referenceTo>vlocity_ins__Drug__c</referenceTo>
        <relationshipLabel>Drug Substitutes For</relationshipLabel>
        <relationshipName>DrugSubstitutesFor</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubstituteDrugName__c</fullName>
        <formula>IF(vlocity_ins__SubstituteDrugId__r.vlocity_ins__TradeName__c!=&quot;&quot;, vlocity_ins__SubstituteDrugId__r.vlocity_ins__TradeName__c, vlocity_ins__SubstituteDrugId__r.vlocity_ins__GenericName__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Substitute Drug Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SubstitutionOrder__c</fullName>
        <label>Substitution Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Drug Substitute</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Drug Substitute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Drug Substitutes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>